--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -43,6 +43,7 @@
     <td class="text-center">{%- if submission[field.name] -%}<img src="{{ url_for('static', filename='img/red_dot.png') }}" height="11" width="11" />{% else %}&nbsp;{% endif %}</td>
     {% endfor %}
     <td>
+    {% if form.form_type == 'INCIDENT' %}
     {%- set status = submission.status -%}
     {%- if status == 'confirmed' -%}
     <img src="{{ url_for('static', filename='img/tick.png') }}" title="{% trans %}Confirmed{% endtrans %}" alt="{% trans %}Confirmed{% endtrans %}" height="11" width="11" />
@@ -50,6 +51,9 @@
     <img src="{{ url_for('static', filename='img/red_dot.png') }}" title="{% trans %}Rejected{% endtrans %}" alt="{% trans %}Rejected{% endtrans %}" height="11" width="11" />
     {%- else -%}
     <img src="{{ url_for('static', filename='img/caution.png') }}" title="{% trans %}Unmarked{% endtrans %}" alt="{% trans %}Unmarked{% endtrans %}" height="11" width="11" />
+    {%- endif -%}
+    {%- else -%}
+    &nbsp;
     {%- endif -%}
     </td>
     {% endif %}<!-- TODO:
@@ -60,7 +64,7 @@
 </tr>
 {% else %}
 {% if perms.edit_submission.can() %}
-{% if form.type == 'CHECKLIST' %}
+{% if form.form_type == 'CHECKLIST' %}
 {%- set colspan = 5 + (location_types|length) + form.groups|length -%}
 <tr class="warning">
     <td class="text-center" colspan="{{ colspan }}">{% trans %}No Data Available{% endtrans %}</td>
