--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -2,7 +2,14 @@
 {%- from 'frontend/macros/participant_list_filter.html' import render_filter_form -%}
 {%- from 'frontend/macros/pagination.html' import render_pager -%}
 {% block toolbar %}
-  <a class="btn btn-info pull-right" href="{{ url_for('participants.participant_list_import') }}"><i class="glyphicon glyphicon-upload glyphicon-white"></i> {% trans %}Import Participants{% endtrans %}</a>
+  <div class="pull-right">
+    {% if perms.export_participants.can() %}
+    <div class="form-group">
+      <input type="submit" class="btn btn-default" name="export" value="{% trans %}Export{% endtrans %}">
+    </div>
+    {% endif %}
+  </div>
+  <a class="btn btn-info pull-right" href="{{ url_for('participants.participant_list_import') }}"em style="margin-right:.5em;"><i class="glyphicon glyphicon-upload glyphicon-white"></i> {% trans %}Import Participants{% endtrans %}</a>
 {% endblock %}
 {% block content %}
 {%- set flash_msgs = get_flashed_messages(category_filter=['task_begun']) -%}
@@ -22,14 +29,7 @@
       <div>
         <form class="form-inline" action="{{ request.url }}" method="POST">
           {{ form.csrf_token() }}{{ form.select_superset() }}
-          <div>
-          {% if perms.export_participants.can() %}
-          <div class="form-group">
-          <input type="submit" class="btn btn-default" name="export" value="{% trans %}Export{% endtrans %}">
-          </div>
-          {% endif %}
-          </div>
-        	<table class="table table-bordered table-striped">
+          <table class="table table-bordered table-striped">
            <thead>
              <tr>
                <th><input type="checkbox" id="select_all" name="select_all"></th>
