--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -1,3 +1,15 @@
+#delete{
+ margin-left:-24px;
+ position:relative;
+ border-radius:6px 0 0 6px;
+ -webkit-border-radius:6px 0 0 6px;
+ -moz-border-radius:6px 0 0 6px;
+ vertical-align:middle;
+ height:38px;
+ text-shadow: 1px 1px 2px rgba(0,0,0,0.25); 
+}
+.i_custom{vertical-align:middle; padding-top:.3em;
+}
 label{font-size: 13px;}
 .modal{transition: none;}
 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
