Styled submissions filter container

--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -1,5 +1,5 @@
 {% macro render_filter_form(form, filter_form) %}
-<form class="form-inline">
+<form class="form-inline well well-sm">
 <div class="form-group">
 {{ filter_form.participant_id(class_='form-control span2', placeholder='Participant ID') }}
 </div>
