--- a/apollo/frontend/templates/frontend/macros/dashboard_filter.html
+++ b/apollo/frontend/templates/frontend/macros/dashboard_filter.html
@@ -7,7 +7,7 @@
 {{ filter_form.checklist_form(class_='form-control span2') }}
 </div>
 <div class="form-group">
-{{ filter_form.location(class_='form-control span4') }}
+{{ filter_form.location(class_='select2-container span4 input-xlarge select2') }}
 </div>
 <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
 <a class="btn btn-default" id="filter_reset">Clear</a>
