--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -7,7 +7,7 @@
 {{ form.name(class_='form-control span3', placeholder='Name') }}
 </div>
 <div class="form-group">
-{{ form.location(class_='form-control span3') }}
+{{ form.location(class_='select2-container span4 input-xlarge select2') }}
 </div>
 <div class="form-group">
 {{ form.sample(class_='form-control span2') }}
