--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -4,7 +4,7 @@
 {{ filter_form.participant_id(class_='form-control span2', placeholder='Participant ID') }}
 </div>
 <div class="form-group">
-{{ filter_form.location(class_='form-control span4') }}
+{{ filter_form.location(class_='select2-container span4 input-xlarge select2') }}
 </div>
 <div class="form-group">
 {{ filter_form.sample(class_='form-control span2') }}
