--- a/apollo/frontend/templates/frontend/nu_checklist_summary.html
+++ b/apollo/frontend/templates/frontend/nu_checklist_summary.html
@@ -27,7 +27,7 @@
 					<table width="100%" class="table table-striped table-bordered">
 						<tr>
 							<td width="30" rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><strong>{{ field.name }}</strong></td>
-							<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="">{{ field.description }}</a></td>
+							<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
 							<td>&nbsp;</td>
 							{% if stats.type == 'continuous' %}
 							<td bgcolor="#eee">{% trans %}Mean{% endtrans %}</td>
