switched dashboard templates from nu_dashboard.html to updated legacy template dashboard.html

--- a/apollo/frontend/templates/frontend/nu_dashboard.html
+++ b/apollo/frontend/templates/frontend/nu_dashboard.html
@@ -30,7 +30,7 @@
 {% endif %}
 </div>
 {% endblock %}
-{% block javascripts %}
+{% block scripts %}
 <script src="{{ url_for('static', filename='js/d3.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/nv.d3.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/filters.js') }}"></script>
