--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -1,7 +1,7 @@
-{% extends "core/layout.html" %}{% load apollo %}{% load i18n %}
-{% block javascripts %}
-{{ block.super }}
-<script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
+{% extends 'frontend/_layout.html' %}
+{% from 'frontend/macros/dashboard_filter.html' import render_filter_form %}
+{% block scripts %}
+<script type="text/javascript" src="{{ url_for('static', filename='js/protovis.min.js') }}"></script>
 <script type="text/javascript">
   var time = new Date().getTime();
      $(document.body).bind("mousemove keypress", function(e) {
@@ -21,32 +21,28 @@
 <div class="row">
   <div class="col-md-12">
       <div class="well well-sm">
-          <form action="{% url dashboard %}" method="get" accept-charset="utf-8" id="filter" class="form-inline">
-              <div class="form-group">
-                {% if perms.core.view_activities %}{{ filter_form.activity }}{% endif %}
-                {{ filter_form.sample }}
-                {{ filter_form.form }}
-                {{ filter_form.location }}
-                <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
-                <a class="btn form-reset btn-default">{% trans "Reset" context "verb" %}</a>
-              </div>
-          </form>
+          {{ render_filter_form(filter_form)}}
       </div>
   </div>
 </div>
-{% for group in summary %}
-{% if forloop.counter0|divisibleby:"6" %}<div class="row">{% endif %}
+{% if data %}
+{% for row in data %}
+{% if loop.index0 is divisibleby 6 %}<div class="row">{% endif %}
   <div class="col-md-2">
-    <legend style="text-align:center"><a href="{% url grouped_dashboard group.id %}">{{ group.name }}</a></legend>
+  {%- if group -%}
+    <legend class="centered"><a href="{{ url_for('dashboard.index', group=group, locationtype=locationtype, **args) }}">{{ row.name }}</a></legend>
+  {%- else -%}
+    <legend style="text-align:center"><a href="{{ url_for('dashboard.index', group=row.name, locationtype=locationtype, **args) }}">{{ row.name }}</a></legend>
+  {% endif %}
     <div>
       <script type="text/javascript+protovis">
         width = 170,
         height = 300,
         offset = 10,
         r = width/2 - offset;
-        data = [{{ group.missing }}, {{ group.partial }}, {{ group.complete }}];
+        data = [{{ row.Missing }}, {{ row.Partial}}, {{ row.Complete }}];
         colors = ["#FF5200", "#FFE22B", "#3BDF4A"];
-        labels = ['{% trans "Missing" %}', '{% trans "Partial" %}', '{% trans "Complete" %}'];
+        labels = ['{% trans %}Missing{% endtrans %}', '{% trans %}Partial{% endtrans %}', '{% trans %}Complete{% endtrans %}'];
 
         var pie = new pv.Panel().width(width).height(height);
             pie.add(pv.Wedge)
@@ -89,16 +85,17 @@
       </script>
     </div>
   </div>
-{% if forloop.last or forloop.counter|divisibleby:"6" %}</div>{% endif %}
-{% empty %}
+{% if loop.last or loop.index is divisibleby 6 %}</div>{% endif %}
+{% endfor %}
+{% else %}
 <div class="row">
   <div class="col-md-12">
   <table width="100%" class="table table-striped table-bordered">
     <tr class="warning">
-      <td style="text-align:center">{% trans "No Data Available" %}</td>
+      <td style="text-align:center">{% trans %}No Data Available{% endtrans %}</td>
     </tr>
   </table>
   </div>
 </div>
-{% endfor %}
+{% endif %}
 {% endblock %}
