--- a/apollo/frontend/templates/frontend/macros/dashboard_filter.html
+++ b/apollo/frontend/templates/frontend/macros/dashboard_filter.html
@@ -1,15 +1,11 @@
 {% macro render_filter_form(filter_form) %}
-<form class="form-inline">
+<form class="form-inline" action="{{ request.url }}" method="GET" accept-charset="utf-8" id="filter">
 <div class="form-group">
-{{ filter_form.sample(class_='form-control span2') }}
+    {{ filter_form.sample(class_='form-control span2') }}
+    {{ filter_form.checklist_form(class_='form-control span2') }}
+    {{ filter_form.location(class_='select2-container span4 input-xlarge select2') }}
+    <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+    <a class="btn btn-default" id="filter_reset">{% trans %}Reset{% endtrans %}</a>
 </div>
-<div class="form-group">
-{{ filter_form.checklist_form(class_='form-control span2') }}
-</div>
-<div class="form-group">
-{{ filter_form.location(class_='select2-container span4 input-xlarge select2') }}
-</div>
-<button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
-<a class="btn btn-default" id="filter_reset">Clear</a>
 </form>
 {% endmacro %}
