--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -47,15 +47,17 @@ border-right-color: #64adea;
 }
 
 .navbar-nav>li>a {text-shadow: 1px 1px 2px rgba(0,0,0,0.25);}*/
+a.btn-sm{line-height: 1.7;}
 .h3{margin-top: 0px;}
 .input-mini{width:85px;}
 .form-inline > * {padding:5px 5px;}
+.btn-custom{margin-left:5px;}
 .form-inline .form-group select.span2, .form-inline .form-group input.span2, .span2{width: 170px;}
 .form-inline .form-group select.span3, .form-inline .form-group input.span3, .span3{width: 255px;}
-.span4{width:340px;}
+.span4{width:354px;}
 .span5{width: 425px;}
 .span6{width: 510px;}
-.select2-container .select2-choice{height: 34px; padding-top: 2.5px;}
+.select2-container .select2-choice{height: 30px; font-size: 12px;}
 .form-container{padding: 0px;}
 .responsive{overflow: auto;}
 
