--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -1,24 +1,26 @@
 {% macro render_filter_form(form) %}
 <form class="form-inline">
 <div class="form-group">
-{{ form.participant_id(class_='form-control span3', placeholder='Participant ID') }}
+{{ form.participant_id(class_='form-control span3 input-sm', placeholder='Participant ID') }}
 </div>
 <div class="form-group">
-{{ form.name(class_='form-control span3', placeholder='Name') }}
+{{ form.name(class_='form-control span3 input-sm', placeholder='Name') }}
 </div>
 <div class="form-group">
-{{ form.location(class_='select2-container span4 input-xlarge select2') }}
+{{ form.location(class_='select2-container span4 select2') }}
 </div>
 <div class="form-group">
-{{ form.sample(class_='form-control span2') }}
+{{ form.sample(class_='form-control span2 input-sm') }}
 </div>
 <div class="form-group">
-{{ form.role(class_='form-control span3') }}
+{{ form.role(class_='form-control span3 input-sm') }}
 </div>
 <div class="form-group">
-{{ form.partner(class_='form-control span3') }}
+{{ form.partner(class_='form-control span3 input-sm') }}
 </div>
-<button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
-<a class="btn btn-default" id="filter_reset">Clear</a>
+<div class="form-group">
+	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
+	<a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
+</div>
 </form>
 {% endmacro %}
