--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -1,27 +1,29 @@
 {% macro render_filter_form(form, filter_form) %}
 <form class="form-inline well well-sm">
 <div class="form-group">
-{{ filter_form.participant_id(class_='form-control span2', placeholder='Participant ID') }}
+{{ filter_form.participant_id(class_='form-control span2 input-sm', placeholder='Participant ID') }}
 </div>
 <div class="form-group">
-{{ filter_form.location(class_='select2-container span4 input-xlarge select2') }}
+{{ filter_form.location(class_='select2-container span4 select2') }}
 </div>
 <div class="form-group">
-{{ filter_form.sample(class_='form-control span2') }}
+{{ filter_form.sample(class_='form-control span2 input-sm') }}
 </div>
 {%- if form.form_type == 'CHECKLIST' -%}
 {%- for group in form.groups -%}
 {% set field = form.pk|string + '__' + group.slug %}
 <div class="form-group">
-{{ filter_form[field](class_='form-control span2') }}
+{{ filter_form[field](class_='form-control span2 input-sm') }}
 </div>
 {%- endfor -%}
 {%- else -%}
 <div class="form-group">
-{{ filter_form.status(class_='form-control span2') }}
+{{ filter_form.status(class_='form-control span2 input-sm') }}
 </div>
 {%- endif -%}
-<button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
-<a class="btn btn-default" id="filter_reset">Clear</a>
+<div class="form-group">
+	<button class="btn btn-warning btn-sm btn-custom" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
+	<a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
+</div>
 </form>
 {% endmacro %}
