--- a/apollo/frontend/templates/frontend/nu_dashboard.html
+++ b/apollo/frontend/templates/frontend/nu_dashboard.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 {% from 'frontend/macros/dashboard_filter.html' import render_filter_form %}
-<div class="well">
+<div class="well well-sm">
 {{ render_filter_form(filter_form)}}
 </div>
 <div class="row">
