--- a/apollo/frontend/templates/frontend/macros/analysis_breadcrumb.html
+++ b/apollo/frontend/templates/frontend/macros/analysis_breadcrumb.html
@@ -6,7 +6,7 @@
     {% else %}
     {% if breadcrumb_data.analysis_type == 'process' %}
       {% if breadcrumb_data.tag %}
-        {% set linkto = url_for('analysis.process_analysis_with_location_and_tag', form_id=breadcrumb_data.form.pk, location_id=location.pk, tag=tag) %}
+        {% set linkto = url_for('analysis.process_analysis_with_location_and_tag', form_id=breadcrumb_data.form.pk, location_id=location.pk, tag=breadcrumb_data.tag) %}
       {% else %}
         {% set linkto = url_for('analysis.process_analysis_with_location', form_id=breadcrumb_data.form.pk, location_id=location.pk) %}
       {% endif %}
