--- a/apollo/frontend/templates/frontend/macros/analysis_navigation.html
+++ b/apollo/frontend/templates/frontend/macros/analysis_navigation.html
@@ -4,7 +4,7 @@
   {% for location in navigation_data.locations %}
     {% if navigation_data.analysis_type == 'process' %}
       {% if navigation_data.tag %}
-        {% set linkto = url_for('analysis.process_analysis_with_location_and_tag', form_id=navigation_data.form.pk, location_id=location.pk, tag=tag) %}
+        {% set linkto = url_for('analysis.process_analysis_with_location_and_tag', form_id=navigation_data.form.pk, location_id=location.pk, tag=navigation_data.tag) %}
       {% else %}
         {% set linkto = url_for('analysis.process_analysis_with_location', form_id=navigation_data.form.pk, location_id=location.pk) %}
       {% endif %}
