--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -9,6 +9,7 @@
     </div>
     {% endif %}
   </div>
+  <a class="btn btn-success pull-right" href="#"em style="margin-right:.5em;"> {% trans %}Send Message{% endtrans %}</a>
   <a class="btn btn-info pull-right" href="{{ url_for('participants.participant_list_import') }}"em style="margin-right:.5em;"><i class="glyphicon glyphicon-upload glyphicon-white"></i> {% trans %}Import Participants{% endtrans %}</a>
 {% endblock %}
 {% block content %}
