--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -24,6 +24,13 @@
     {% block head %}{% endblock %}
   </head>
   <style type="text/css">
+    .navbar-nav li a {
+     line-height: 25px;
+    }
+    .navbar-header {
+      display: table-row;
+      height: 43px;
+    }
   </style>
   <body>
     <div class="navbar navbar-default navbar-static-top">
@@ -72,8 +79,8 @@
             <li><a href="{{ current_menu.submenu('messages').url }}"><i class="glyphicon glyphicon-envelope"></i> {{ current_menu.submenu('messages').text }}</a></li>
             {%- endif -%}
             <li class="divider-vertical"></li>
-            <li style="margin-top:-3px">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="{{ current_user.email|gravatar }}" class="img-rounded" style="margin-right: 0.25em; vertical-align: middle; border-radius: 12px"> {{ current_user.email }}<b class="caret"></b></a>
+            <li>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="{{ current_user.email|gravatar }}" class="img-rounded" style="margin-right: 0.25em; border-radius: 12px"> {{ current_user.email }}<b class="caret"></b></a>
               <ul class="dropdown-menu">
               {%- if current_menu.submenu('events').visible -%}
                 <li><a href="{{ current_menu.submenu('events').url }}"><i class="glyphicon glyphicon-th-list"></i> {{ current_menu.submenu('events').text }}</a></li>
